--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "name": "gas-lib",
-  "version": "1.1.1",
-  "author": "jeanremidelteil"
+	"name": "gas-lib",
+	"version": "1.1.1",
+	"author": "jeanremidelteil",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/JeanRemiDelteil/gappsLib.git"
+	}
 }
